# legado

trunk/: .project  ExtendedGui.rb  INSTALL  Makefile.am  NEWS  README  autogen.sh  configure.in  gramps.sh.in  init.rb  legado.rb  loader2.rb
trunk/data/: Makefile.am  gramps.desktop.in  gramps.keys.in  gramps.xml.in  grampsxml.dtd  grampsxml.rng
trunk/data/man/: Makefile.am  gramps.1.in
trunk/data/man/fr/: gramps.1.in
trunk/data/man/nl/: gramps.1.in
trunk/data/man/pl/: Makefile.am  gramps.1.in
trunk/data/man/sv/: gramps.1.in
trunk/debian/: README.Debian  changelog  control  gramps.dirs  gramps.menu  rules
trunk/example/gedcom/: sample.ged
trunk/icons/: ExtendedLoader.rb
trunk/po/: POTFILES.in  POTFILES.skip  bg.po  check_po  cs.po  da.po  de.po  eo.po  es.po  fi.po  fr.po  gramps.pot  hr.po  hu.po  it.po  lt.po  nb.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sv.po  tr.po  zh_CN.po
trunk/src/: ArgHandler.py  Assistant.py  AutoComp.py  BaseDoc.py  Bookmarks.py  ColumnOrder.py  Date.py  DateEdit.py  DbLoader.py  DbManager.py  DbState.py  DdTargets.py  DisplayState.py  Errors.py  ExportAssistant.py  ExportOptions.py  FontScale.py  GrampsAboutDialog.py  GrampsCfg.py  GrampsDisplay.py  GrampsWidgets.py  ImgManip.py  LdsUtils.py  ListModel.py  Lru.py  Makefile.am  ManagedWindow.py  MarkupText.py  Navigation.py  PageView.py  PlaceUtils.py  ProgressDialog.py  QuestionDialog.py  QuickReports.py  RecentFiles.py  Relationship.py  Reorder.py  ScratchPad.py  Sort.py  Spell.py  (+16 more)
trunk/test/: try_tree_model.py
wiki/: ImportingGEDCOM.wiki
(+633 files in other folders)
